# Talos-Controller

./: .clang-format  .fdignore  .gitignore  Around_campus.json  CMakeLists.txt  Makefile  README.md  Table_Grab.json  controller.cpp  default.html  figure8.json  go1.cpp  new_positions.json  pid.cpp  poses  robot.cpp  robot.hpp  tags  test  test2  times  todo.md  traj.cpp  trajectory.cpp  wheelchair_log  wheelchair_log2  wheelchair_log3  wheelchair_log4
include/unitree_legged_sdk/: quadruped.h  unitree_legged_sdk.h
robot_configs/: go1.json  sim_bot.json  wheelchair_profile_1_bar_3.json  wheelchair_profile_1_bar_5.json  wheelchair_profile_3_bar_1.json  wheelchair_profile_3_bar_3.json
ros/ros_move/: CMakeLists.txt  package.xml
src/: controller.hpp  cppmap3d.hh  frame_controller.cpp  frame_controller.hpp  go1.cpp  go1.hpp  linear_controller.cpp  linear_controller.hpp  logger.cpp  logger.hpp  main.cpp  mppi.cpp  mppi.hpp  path_controller.cpp  path_controller.hpp  pid.cpp  pid.hpp  robot.cpp  robot.hpp  robot_config.hpp  run_sim.cpp  sensor_manager.cpp  sensor_manager.hpp  socket.cpp  socket.hpp  trajectory.cpp  trajectory.hpp  trajectoryRun.cpp  trajectory_controller.cpp  trajectory_controller.hpp  transformations.hpp  types.hpp  ublox.cpp  ublox.hpp  zmq.hpp
src/communication/: brain.cpp  brain.hpp  server.cpp  server.hpp  socket.cpp
src/control/: control_loop.cpp  linear_controller.cpp  linear_controller.hpp  mppi.cpp  mppi.hpp  pid.cpp  pid.hpp  trajectory_controller.hpp
src/controllers/: linear_controller.cpp  linear_controller.hpp  mppi.cpp  path_controller.cpp  path_controller.hpp  robot_path.cpp  robot_path.hpp  trajectory_controller.hpp
src/planning/: motion_profile.cpp  motion_profile.hpp  path_planner.cpp  path_planner.hpp  robot_path.cpp  robot_path.hpp
src/robots/: g1.cpp  g1.hpp  go1.cpp  go1.hpp  robot.cpp  robot.hpp  sim_bot.cpp  sim_bot.hpp  sim_bot.json  wheelchair.cpp  wheelchair.hpp  wheelchair.json  wheelchair_profile_3_bar_3.json
src/sensors/: NMEA.hpp  Publisher.hpp  sensor.cpp  sensor.hpp  sensor_manager.cpp  sensor_manager.hpp  ublox.cpp  ublox.hpp
src/utils/: EGM96.cpp  cppmap3d.hh  frames.cpp  frames.hpp  load_config.cpp  load_config.hpp  logger.cpp  logger.hpp  math.hpp  motion_profile.hpp  pid.cpp  pid.hpp  sim.cpp  sim.hpp  socket.cpp  socket.hpp  socket_parser.cpp  socket_parser.hpp  timer.c  timer.h  transformations.hpp  types.hpp
tools/: Makefile  chooser.js  default.html  sim.c  sim.cpp  sim.hpp
waypoints/: From_O_whole_campus_round.json  Long_Parkinglot_Loop.json  O_to_Front_of_H.json  O_whole_campus_round.json  PT_Loop_short.json  PT_ping_pong.json  Parking_lots_loop.json  Parkinglot_Loop.json  T_Diamond.json  T_Long_Straight_Path.json  T_Table_Grab_to_O.json  T_loop_through_cage.json  Table_Grab_full.json  Table_Grab_reverse.json  _Parkinglot_ping_pong.json  _Table_Grab_with_corrections.json  _Table_Grab_with_corrections_reversed.json  _basketball_loop.json  _ramp_over_parkinglot.json  _ramp_over_parkinglot2.json  _shotter_weg_loop.json  basketball_loop.json  basketball_loop_other.json  parkplatz_quick_iteration_loop.json  shotter_weg_loop.json
